[gd_scene load_steps=7 format=3 uid="uid://c37y5kfbu1blc"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_6crti"]
[ext_resource type="PackedScene" uid="uid://cjmj0l5wppk8d" path="res://scenes/player.tscn" id="1_ru6yb"]
[ext_resource type="Texture2D" uid="uid://bco2eo4asrwp2" path="res://assets/orange_vortex.png" id="2_tirmx"]
[ext_resource type="PackedScene" uid="uid://bmbuprw6odt38" path="res://scenes/weapon_progress_bar.tscn" id="4_0juwd"]
[ext_resource type="PackedScene" uid="uid://800dgy8ejcem" path="res://scenes/player_ui.tscn" id="4_g3y3w"]

[sub_resource type="Curve2D" id="Curve2D_x3c68"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1711, -889, 0, 0, 0, 0, 2193, -911, 0, 0, 0, 0, 2201, 1341, 0, 0, 0, 0, -1711, 1336, 0, 0, 0, 0, -1711, -881)
}
point_count = 5

[node name="MainGame" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_6crti")

[node name="ParallaxBackground" type="Parallax2D" parent="."]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
z_index = -1
repeat_size = Vector2(2670, 2670)

[node name="OrangeVortex" type="Sprite2D" parent="ParallaxBackground"]
light_mask = 2
visibility_layer = 2
texture_repeat = 2
texture = ExtResource("2_tirmx")

[node name="TileMapLayer" type="TileMapLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="TileMapLayer"]
layer = -30
follow_viewport_enabled = true

[node name="Player" parent="TileMapLayer" instance=ExtResource("1_ru6yb")]
unique_name_in_owner = true

[node name="EnemyPath" type="Path2D" parent="TileMapLayer/Player"]
position = Vector2(-240, -220)
curve = SubResource("Curve2D_x3c68")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="TileMapLayer/Player/EnemyPath"]
unique_name_in_owner = true
visible = false
position = Vector2(-1711, -889)
rotation = -0.00563519

[node name="Camera2D" type="Camera2D" parent="TileMapLayer/Player"]
zoom = Vector2(0.5, 0.5)
process_callback = 0
position_smoothing_enabled = true

[node name="EnemyTimer" type="Timer" parent="TileMapLayer"]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource("4_g3y3w")]
offset_left = 68.0
offset_top = 65.0
offset_right = 68.0
offset_bottom = 65.0
scale = Vector2(0.75, 0.75)

[node name="WeaponProgressBar" parent="CanvasLayer" instance=ExtResource("4_0juwd")]
unique_name_in_owner = true
offset_left = 173.0
offset_top = 139.0
offset_right = 173.0
offset_bottom = 139.0
scale = Vector2(0.75, 0.75)

[connection signal="health_depleted" from="TileMapLayer/Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="TileMapLayer/EnemyTimer" to="." method="_on_enemy_timer_timeout"]
